...
    }
    
    enum Action {
        case tabSelected(Tab)
        case taskInput(TaskInputReducer.Action)
        case taskHistory(TaskHistoryReducer.Action)
        case settings(SettingsReducer.Action)
    }
    
    enum Tab: String, CaseIterable {
        case tasks = "タスク"
        case history = "履歴"
        case settings = "設定"
...
